k8s/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: headless-to-prometheus
  namespace: jenkins
spec:
  clusterIP: None
  externalName: prometheus-service.monitoring.svc.cluster.local
